--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "<=19.0.1" 
+    "node": "19.0.1",
+    "npm": "9.8.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
